--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,6 +121,11 @@
   <data name="1353161228_Tomato" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1353161228_Tomato.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logging_template_xml" xml:space="preserve">
+    <value>&lt;?xml version="1.0" encoding="utf-8" ?&gt;
+&lt;log&gt;
+&lt;/log&gt;</value>
+  </data>
   <data name="_1353161231_Tomato" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1353161231_Tomato.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
